--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
